// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-alarm-metric-parameters-field Renders \`c-alarm-metric-parameters-field\` with custom props 1`] = `
<div class="v-menu__content theme--light v-autocomplete__content" style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;">
  <div class="v-select-list v-card theme--light">
    <div role="list" class="v-list theme--light">
      <div disabled="disabled" role="listitem" class="v-list--disabled"><a disabled="disabled" class="v-list__tile v-list__tile--link v-list__tile--disabled v-list__tile--active theme--light primary--text">
          <div class="v-list__tile__action">
            <div class="v-input v-input--selection-controls v-input--checkbox v-input--is-label-active v-input--is-dirty v-input--is-disabled theme--light">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <div class="v-input--selection-controls__input"><input aria-checked="true" disabled="disabled" role="checkbox" type="checkbox" value="">
                    <div class="v-input--selection-controls__ripple primary--text"></div><i aria-hidden="true" class="v-icon material-icons theme--light primary--text">check_box</i>
                  </div>
                </div>
                <div class="v-messages theme--light">
                  <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                </div>
              </div>
            </div>
          </div>
          <div class="v-list__tile__content">
            <div class="v-list__tile__title">Number of created alarms</div>
          </div>
        </a></div>
      <div disabled="disabled" role="listitem" class="v-list--disabled"><a disabled="disabled" class="v-list__tile v-list__tile--link v-list__tile--disabled v-list__tile--active theme--light primary--text">
          <div class="v-list__tile__action">
            <div class="v-input v-input--selection-controls v-input--checkbox v-input--is-label-active v-input--is-dirty v-input--is-disabled theme--light">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <div class="v-input--selection-controls__input"><input aria-checked="true" disabled="disabled" role="checkbox" type="checkbox" value="">
                    <div class="v-input--selection-controls__ripple primary--text"></div><i aria-hidden="true" class="v-icon material-icons theme--light primary--text">check_box</i>
                  </div>
                </div>
                <div class="v-messages theme--light">
                  <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                </div>
              </div>
            </div>
          </div>
          <div class="v-list__tile__content">
            <div class="v-list__tile__title">% of alarms with auto remediation</div>
          </div>
        </a></div>
      <div disabled="disabled" role="listitem" class="v-list--disabled"><a disabled="disabled" class="v-list__tile v-list__tile--link v-list__tile--disabled theme--light">
          <div class="v-list__tile__action">
            <div class="v-input v-input--selection-controls v-input--checkbox v-input--is-disabled theme--light">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <div class="v-input--selection-controls__input"><input aria-checked="false" disabled="disabled" role="checkbox" type="checkbox" value="">
                    <div class="v-input--selection-controls__ripple"></div><i aria-hidden="true" class="v-icon material-icons theme--light">check_box_outline_blank</i>
                  </div>
                </div>
                <div class="v-messages theme--light">
                  <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                </div>
              </div>
            </div>
          </div>
          <div class="v-list__tile__content">
            <div class="v-list__tile__title">% of alarms with tickets created</div>
          </div>
        </a></div>
    </div>
  </div>
</div>
`;

exports[`c-alarm-metric-parameters-field Renders \`c-alarm-metric-parameters-field\` with default props 1`] = `
<div class="v-menu__content theme--light v-autocomplete__content" style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;">
  <div class="v-select-list v-card theme--light">
    <div role="list" class="v-list theme--light">
      <div role="listitem"><a class="v-list__tile v-list__tile--link theme--light">
          <div class="v-list__tile__action">
            <div class="v-input v-input--selection-controls v-input--checkbox theme--light">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <div class="v-input--selection-controls__input"><input aria-checked="false" role="checkbox" type="checkbox" value="">
                    <div class="v-input--selection-controls__ripple"></div><i aria-hidden="true" class="v-icon material-icons theme--light">check_box_outline_blank</i>
                  </div>
                </div>
                <div class="v-messages theme--light">
                  <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                </div>
              </div>
            </div>
          </div>
          <div class="v-list__tile__content">
            <div class="v-list__tile__title">Number of active alarms</div>
          </div>
        </a></div>
      <div disabled="disabled" role="listitem" class="v-list--disabled"><a disabled="disabled" class="v-list__tile v-list__tile--link v-list__tile--disabled v-list__tile--active theme--light primary--text">
          <div class="v-list__tile__action">
            <div class="v-input v-input--selection-controls v-input--checkbox v-input--is-label-active v-input--is-dirty v-input--is-disabled theme--light">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <div class="v-input--selection-controls__input"><input aria-checked="true" disabled="disabled" role="checkbox" type="checkbox" value="">
                    <div class="v-input--selection-controls__ripple primary--text"></div><i aria-hidden="true" class="v-icon material-icons theme--light primary--text">check_box</i>
                  </div>
                </div>
                <div class="v-messages theme--light">
                  <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                </div>
              </div>
            </div>
          </div>
          <div class="v-list__tile__content">
            <div class="v-list__tile__title">Number of created alarms</div>
          </div>
        </a></div>
      <div role="listitem"><a class="v-list__tile v-list__tile--link theme--light">
          <div class="v-list__tile__action">
            <div class="v-input v-input--selection-controls v-input--checkbox theme--light">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <div class="v-input--selection-controls__input"><input aria-checked="false" role="checkbox" type="checkbox" value="">
                    <div class="v-input--selection-controls__ripple"></div><i aria-hidden="true" class="v-icon material-icons theme--light">check_box_outline_blank</i>
                  </div>
                </div>
                <div class="v-messages theme--light">
                  <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                </div>
              </div>
            </div>
          </div>
          <div class="v-list__tile__content">
            <div class="v-list__tile__title">Number of non-displayed alarms</div>
          </div>
        </a></div>
      <div role="listitem"><a class="v-list__tile v-list__tile--link theme--light">
          <div class="v-list__tile__action">
            <div class="v-input v-input--selection-controls v-input--checkbox theme--light">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <div class="v-input--selection-controls__input"><input aria-checked="false" role="checkbox" type="checkbox" value="">
                    <div class="v-input--selection-controls__ripple"></div><i aria-hidden="true" class="v-icon material-icons theme--light">check_box_outline_blank</i>
                  </div>
                </div>
                <div class="v-messages theme--light">
                  <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                </div>
              </div>
            </div>
          </div>
          <div class="v-list__tile__content">
            <div class="v-list__tile__title">Number of alarms under automatic remediation</div>
          </div>
        </a></div>
      <div role="listitem"><a class="v-list__tile v-list__tile--link theme--light">
          <div class="v-list__tile__action">
            <div class="v-input v-input--selection-controls v-input--checkbox theme--light">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <div class="v-input--selection-controls__input"><input aria-checked="false" role="checkbox" type="checkbox" value="">
                    <div class="v-input--selection-controls__ripple"></div><i aria-hidden="true" class="v-icon material-icons theme--light">check_box_outline_blank</i>
                  </div>
                </div>
                <div class="v-messages theme--light">
                  <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                </div>
              </div>
            </div>
          </div>
          <div class="v-list__tile__content">
            <div class="v-list__tile__title">Number of alarms with PBehavior</div>
          </div>
        </a></div>
      <div role="listitem"><a class="v-list__tile v-list__tile--link theme--light">
          <div class="v-list__tile__action">
            <div class="v-input v-input--selection-controls v-input--checkbox theme--light">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <div class="v-input--selection-controls__input"><input aria-checked="false" role="checkbox" type="checkbox" value="">
                    <div class="v-input--selection-controls__ripple"></div><i aria-hidden="true" class="v-icon material-icons theme--light">check_box_outline_blank</i>
                  </div>
                </div>
                <div class="v-messages theme--light">
                  <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                </div>
              </div>
            </div>
          </div>
          <div class="v-list__tile__content">
            <div class="v-list__tile__title">Number of alarms with correlation</div>
          </div>
        </a></div>
      <div role="listitem"><a class="v-list__tile v-list__tile--link theme--light">
          <div class="v-list__tile__action">
            <div class="v-input v-input--selection-controls v-input--checkbox theme--light">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <div class="v-input--selection-controls__input"><input aria-checked="false" role="checkbox" type="checkbox" value="">
                    <div class="v-input--selection-controls__ripple"></div><i aria-hidden="true" class="v-icon material-icons theme--light">check_box_outline_blank</i>
                  </div>
                </div>
                <div class="v-messages theme--light">
                  <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                </div>
              </div>
            </div>
          </div>
          <div class="v-list__tile__content">
            <div class="v-list__tile__title">Total number of acks</div>
          </div>
        </a></div>
      <div role="listitem"><a class="v-list__tile v-list__tile--link theme--light">
          <div class="v-list__tile__action">
            <div class="v-input v-input--selection-controls v-input--checkbox theme--light">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <div class="v-input--selection-controls__input"><input aria-checked="false" role="checkbox" type="checkbox" value="">
                    <div class="v-input--selection-controls__ripple"></div><i aria-hidden="true" class="v-icon material-icons theme--light">check_box_outline_blank</i>
                  </div>
                </div>
                <div class="v-messages theme--light">
                  <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                </div>
              </div>
            </div>
          </div>
          <div class="v-list__tile__content">
            <div class="v-list__tile__title">Number of canceled acks</div>
          </div>
        </a></div>
      <div role="listitem"><a class="v-list__tile v-list__tile--link theme--light">
          <div class="v-list__tile__action">
            <div class="v-input v-input--selection-controls v-input--checkbox theme--light">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <div class="v-input--selection-controls__input"><input aria-checked="false" role="checkbox" type="checkbox" value="">
                    <div class="v-input--selection-controls__ripple"></div><i aria-hidden="true" class="v-icon material-icons theme--light">check_box_outline_blank</i>
                  </div>
                </div>
                <div class="v-messages theme--light">
                  <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                </div>
              </div>
            </div>
          </div>
          <div class="v-list__tile__content">
            <div class="v-list__tile__title">Number of active alarms with acks</div>
          </div>
        </a></div>
      <div role="listitem"><a class="v-list__tile v-list__tile--link theme--light">
          <div class="v-list__tile__action">
            <div class="v-input v-input--selection-controls v-input--checkbox theme--light">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <div class="v-input--selection-controls__input"><input aria-checked="false" role="checkbox" type="checkbox" value="">
                    <div class="v-input--selection-controls__ripple"></div><i aria-hidden="true" class="v-icon material-icons theme--light">check_box_outline_blank</i>
                  </div>
                </div>
                <div class="v-messages theme--light">
                  <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                </div>
              </div>
            </div>
          </div>
          <div class="v-list__tile__content">
            <div class="v-list__tile__title">Number of active alarms with tickets</div>
          </div>
        </a></div>
      <div role="listitem"><a class="v-list__tile v-list__tile--link theme--light">
          <div class="v-list__tile__action">
            <div class="v-input v-input--selection-controls v-input--checkbox theme--light">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <div class="v-input--selection-controls__input"><input aria-checked="false" role="checkbox" type="checkbox" value="">
                    <div class="v-input--selection-controls__ripple"></div><i aria-hidden="true" class="v-icon material-icons theme--light">check_box_outline_blank</i>
                  </div>
                </div>
                <div class="v-messages theme--light">
                  <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                </div>
              </div>
            </div>
          </div>
          <div class="v-list__tile__content">
            <div class="v-list__tile__title">Number of active alarms without tickets</div>
          </div>
        </a></div>
      <div role="listitem"><a class="v-list__tile v-list__tile--link theme--light">
          <div class="v-list__tile__action">
            <div class="v-input v-input--selection-controls v-input--checkbox theme--light">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <div class="v-input--selection-controls__input"><input aria-checked="false" role="checkbox" type="checkbox" value="">
                    <div class="v-input--selection-controls__ripple"></div><i aria-hidden="true" class="v-icon material-icons theme--light">check_box_outline_blank</i>
                  </div>
                </div>
                <div class="v-messages theme--light">
                  <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                </div>
              </div>
            </div>
          </div>
          <div class="v-list__tile__content">
            <div class="v-list__tile__title">% of correlated alarms</div>
          </div>
        </a></div>
      <div role="listitem"><a class="v-list__tile v-list__tile--link theme--light">
          <div class="v-list__tile__action">
            <div class="v-input v-input--selection-controls v-input--checkbox theme--light">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <div class="v-input--selection-controls__input"><input aria-checked="false" role="checkbox" type="checkbox" value="">
                    <div class="v-input--selection-controls__ripple"></div><i aria-hidden="true" class="v-icon material-icons theme--light">check_box_outline_blank</i>
                  </div>
                </div>
                <div class="v-messages theme--light">
                  <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                </div>
              </div>
            </div>
          </div>
          <div class="v-list__tile__content">
            <div class="v-list__tile__title">% of alarms with auto remediation</div>
          </div>
        </a></div>
      <div role="listitem"><a class="v-list__tile v-list__tile--link theme--light">
          <div class="v-list__tile__action">
            <div class="v-input v-input--selection-controls v-input--checkbox theme--light">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <div class="v-input--selection-controls__input"><input aria-checked="false" role="checkbox" type="checkbox" value="">
                    <div class="v-input--selection-controls__ripple"></div><i aria-hidden="true" class="v-icon material-icons theme--light">check_box_outline_blank</i>
                  </div>
                </div>
                <div class="v-messages theme--light">
                  <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                </div>
              </div>
            </div>
          </div>
          <div class="v-list__tile__content">
            <div class="v-list__tile__title">% of alarms with tickets created</div>
          </div>
        </a></div>
      <div role="listitem"><a class="v-list__tile v-list__tile--link theme--light">
          <div class="v-list__tile__action">
            <div class="v-input v-input--selection-controls v-input--checkbox theme--light">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <div class="v-input--selection-controls__input"><input aria-checked="false" role="checkbox" type="checkbox" value="">
                    <div class="v-input--selection-controls__ripple"></div><i aria-hidden="true" class="v-icon material-icons theme--light">check_box_outline_blank</i>
                  </div>
                </div>
                <div class="v-messages theme--light">
                  <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                </div>
              </div>
            </div>
          </div>
          <div class="v-list__tile__content">
            <div class="v-list__tile__title">% of non-displayed alarms</div>
          </div>
        </a></div>
      <div role="listitem"><a class="v-list__tile v-list__tile--link theme--light">
          <div class="v-list__tile__action">
            <div class="v-input v-input--selection-controls v-input--checkbox theme--light">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <div class="v-input--selection-controls__input"><input aria-checked="false" role="checkbox" type="checkbox" value="">
                    <div class="v-input--selection-controls__ripple"></div><i aria-hidden="true" class="v-icon material-icons theme--light">check_box_outline_blank</i>
                  </div>
                </div>
                <div class="v-messages theme--light">
                  <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                </div>
              </div>
            </div>
          </div>
          <div class="v-list__tile__content">
            <div class="v-list__tile__title">% of manually remediated alarms</div>
          </div>
        </a></div>
      <div role="listitem"><a class="v-list__tile v-list__tile--link theme--light">
          <div class="v-list__tile__action">
            <div class="v-input v-input--selection-controls v-input--checkbox theme--light">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <div class="v-input--selection-controls__input"><input aria-checked="false" role="checkbox" type="checkbox" value="">
                    <div class="v-input--selection-controls__ripple"></div><i aria-hidden="true" class="v-icon material-icons theme--light">check_box_outline_blank</i>
                  </div>
                </div>
                <div class="v-messages theme--light">
                  <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                </div>
              </div>
            </div>
          </div>
          <div class="v-list__tile__content">
            <div class="v-list__tile__title">Average time to ack alarms</div>
          </div>
        </a></div>
      <div role="listitem"><a class="v-list__tile v-list__tile--link theme--light">
          <div class="v-list__tile__action">
            <div class="v-input v-input--selection-controls v-input--checkbox theme--light">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <div class="v-input--selection-controls__input"><input aria-checked="false" role="checkbox" type="checkbox" value="">
                    <div class="v-input--selection-controls__ripple"></div><i aria-hidden="true" class="v-icon material-icons theme--light">check_box_outline_blank</i>
                  </div>
                </div>
                <div class="v-messages theme--light">
                  <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                </div>
              </div>
            </div>
          </div>
          <div class="v-list__tile__content">
            <div class="v-list__tile__title">Average time to resolve alarms</div>
          </div>
        </a></div>
      <div role="listitem"><a class="v-list__tile v-list__tile--link theme--light">
          <div class="v-list__tile__action">
            <div class="v-input v-input--selection-controls v-input--checkbox theme--light">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <div class="v-input--selection-controls__input"><input aria-checked="false" role="checkbox" type="checkbox" value="">
                    <div class="v-input--selection-controls__ripple"></div><i aria-hidden="true" class="v-icon material-icons theme--light">check_box_outline_blank</i>
                  </div>
                </div>
                <div class="v-messages theme--light">
                  <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                </div>
              </div>
            </div>
          </div>
          <div class="v-list__tile__content">
            <div class="v-list__tile__title">Minimum time to ack alarms</div>
          </div>
        </a></div>
      <div role="listitem"><a class="v-list__tile v-list__tile--link theme--light">
          <div class="v-list__tile__action">
            <div class="v-input v-input--selection-controls v-input--checkbox theme--light">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <div class="v-input--selection-controls__input"><input aria-checked="false" role="checkbox" type="checkbox" value="">
                    <div class="v-input--selection-controls__ripple"></div><i aria-hidden="true" class="v-icon material-icons theme--light">check_box_outline_blank</i>
                  </div>
                </div>
                <div class="v-messages theme--light">
                  <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                </div>
              </div>
            </div>
          </div>
          <div class="v-list__tile__content">
            <div class="v-list__tile__title">Maximum time to ack alarms</div>
          </div>
        </a></div>
    </div>
  </div>
</div>
`;

exports[`c-alarm-metric-parameters-field Renders \`c-alarm-metric-parameters-field\` with external metrics 1`] = `
<div class="v-menu__content theme--light v-autocomplete__content" style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;">
  <div class="v-select-list v-card theme--light">
    <div role="list" class="v-list theme--light">
      <div role="listitem">
        <div class="v-list__tile theme--light">
          <div class="v-list__tile__content">
            <div class="v-list__tile__title">No data available</div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
